welcome.lessons.welcome.bat.bool1.PosNeg.scala.error
posNeg:2: error: ')' expected but integer literal found.
return (( true && a<0 b<0 )&& ( a>0 && b<0 ) && ( a<0 && b>0))
                        ^posNeg:3: error: ')' expected but '}' found.
} 
^