welcome.lessons.welcome.bat.bool1.PosNeg.scala.code
def posNeg(a:Int, b:Int, negative:Boolean):Boolean = {
return (( true && a<0 b<0 )&& ( a>0 && b<0 ) && ( a<0 && b>0))
}